--- a/wup_3.Rmd
+++ b/wup_3.Rmd
@@ -14,8 +14,11 @@ require(tidyverse)
 require(tigerstats)
 davisdata <- read.csv(file="UCDavis.csv")
 ```
-## Our Goal is to answer this question Is there a difference between the alcohol consumed between the row
-## you choose to sit in??
+## Our Goal is to answer this question Is there a difference between the alcohol consumed between the row you choose to sit in?
+
+$H_0$ There is no difference in alcohol consumption based on where one sits in class.
+
+$H_A$ There is a difference in alcohol consumption based on where one sits in class.
 
 ## Now with ggplot - first select the basic data
 
