Explained fancy boxplot result, added numerical summary plot and explanation, and added inferential tests plot

--- a/wup_3.Rmd
+++ b/wup_3.Rmd
@@ -40,9 +40,24 @@ The boxplot shows that people who drink more alcohol on average tend to sit in t
 basicCN + geom_boxplot(notch=TRUE,outlier.color = "red") + stat_boxplot(geom ='errorbar') + labs(title="Fancy notch boxplot \n with 2 lines")
 ```
 
+This fancy box plot shows the significant difference between the alcohol consumption of the back row and the middle row, along with showing the difference between the back row and the front row's alcohol consumption.
+
 ## Numerical Summarys 
 
+```{r}
+favstats(alcohol~Seat,data=ucdavis1)
+```
+
+Based on this chart, the back row has 8.5 more than the middle or front rows per week. The middle row is shown to drink 3.3 drinks per week and the front row has 1.7 drinks per week. However it's likely that the amount of drinks each row has is not the same so the quantity in each persons drink may differ. 
+
 ## Inferential Tests
+
+```{r}
+model1 <- aov(alcohol~Seat,data=davisdata)
+summary.aov(model1)
+```
+
+
 
 ## Conclusions
 
